Fixed an issue with wrapping and overflow of the current filters

--- a/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
+++ b/metacatui/src/main/webapp/js/themes/default/css/metacatui.css
@@ -822,10 +822,11 @@ Bold 700
 		border-radius: 2px;
 		-moz-border-radius: 2px;
 		-webkit-border-radius: 2px;
-		min-height: 1em;
+		min-height: 1.5em;
 		width: auto;
 		max-width: 100%;
 		margin: 5px 5px 0px 0px;
+		float:left;
 	}
 	
 	.current-filters > li > span{
